# SolverWrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: ConstraintExpression.h  Expression.h  Model.h  SLRException.h  Variable.h
src/: ConstraintExpression.cpp  Expression.cpp  Model.cpp  SLRException.cpp  Variable.cpp  main.cpp
